Trying Git Again

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>This is nothing html</title>
 </head>
 <body>
-    
+    <h1>This is  a heading</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minima id repudiandae aperiam deserunt, velit doloremque excepturi deleniti quo culpa vel debitis quis quisquam mollitia beatae totam voluptatem. Sapiente, mollitia corrupti! Odio sequi commodi magnam sed quisquam. Necessitatibus nam doloremque, dolores at a nostrum dolorum explicabo soluta nihil, maxime rerum.</p>
 </body>
 </html>
